:clipboard::name_badge: Fix module name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@umm/firebase_",
+  "name": "@umm/firebase_core",
   "version": "4.1.0",
   "description": "Firebase Unity SDK / Core",
   "homepage": "https://github.com/umm-projects/firebase_core",
