--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "ncp": "^2.0.0",
     "rimraf": "^2.6.1"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "glob": "7.1.2",
+    "rimraf": "2.6.2"
+  }
 }
