--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "url": "https://github.com/umm-projects/firebase_core/issues"
   },
   "scripts": {
-    "postinstall": "node scripts/postinstall.js",
-    "postuninstall": "node scripts/postuninstall.js",
+    "umm:init": "./node_modules/.bin/umm-init",
+    "umm:install": "./node_modules/.bin/umm-install",
+    "umm:uninstall": "./node_modules/.bin/umm-uninstall",
+    "postinstall": "npm run --silent umm:install && node ./scripts/postinstall.js",
+    "postuninstall": "npm run --silent umm:uninstall",
     "build:test": "tar -tf $(npm pack -s) && $(npm bin)/rimraf $_"
   },
   "license": "Apache-2.0",
@@ -21,14 +24,10 @@
     "scripts"
   ],
   "dependencies": {
+    "@umm/scripts": "umm-projects/scripts#^1.0.0",
     "glob": "^7.1.2",
     "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0",
     "rimraf": "^2.6.1"
   },
-  "devDependencies": {},
-  "resolutions": {
-    "glob": "7.1.2",
-    "rimraf": "2.6.2"
-  }
+  "devDependencies": {}
 }
