:clipboard: Refactor package.json

--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
     "scripts"
   ],
   "dependencies": {
-    "@umm/scripts": "umm-projects/scripts#^1.0.0",
-    "glob": "^7.1.2",
-    "mkdirp": "^0.5.1",
-    "rimraf": "^2.6.1"
+    "@umm/scripts": "umm-projects/scripts#^1.0.0"
   },
   "devDependencies": {}
 }
