--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # =============== #
 # Unity generated #
 # =============== #
-[Tt]emp/
-[Oo]bj/
-[Ll]ibrary/
-[Bb]uild/
-UnityGenerated/
+/[Tt]emp/
+/[Oo]bj/
+/[Ll]ibrary/
+/[Bb]uild/
+/UnityGenerated/
 # Library should not freeze version, it should be written in README.
 /ProjectSettings/ProjectVersion.txt
 
@@ -13,33 +13,32 @@ UnityGenerated/
 # IDE generated #
 # ============= #
 # MonoDevelop / VisualStudio
-ExportedObj/
-*.svd
-*.userprefs
-*.csproj
-*.pidb
-*.suo
-*.sln
-*.user
-*.unityproj
-*.booproj
+/ExportedObj/
+/*.svd
+/*.userprefs
+/*.csproj
+/*.pidb
+/*.suo
+/*.sln
+/*.user
+/*.unityproj
+/*.booproj
 # Sublime Text
-*.sublime-*
+/*.sublime-*
 # Visual Studio Code
-.vscode/
+/.vscode/
 # IntelliJ Rider
-.idea/
-Assets/Plugins/Editor/JetBrains/
-Assets/Plugins/Editor/JetBrains.meta
+/.idea/
+/Assets/Plugins/Editor/JetBrains/
+/Assets/Plugins/Editor/JetBrains.meta
 
 # ======================= #
 # umm (Node.js) generated #
 # ======================= #
-node_modules/
-Assets/Modules*
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/node_modules/
+/Assets/Modules*
+/package-lock.json
+/yarn.lock
 
 # ============ #
 # OS generated #
@@ -55,7 +54,7 @@ Thumbs.db
 # ======== #
 # Optional #
 # ======== #
-Assets/Plugins/Editor.meta
+/Assets/Plugins/Editor.meta
 
 # ====== #
 # Custom #
