:sparkles: Add umm/parse_dotnet46

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "scripts"
   ],
   "dependencies": {
+    "@umm/parse_dotnet46": "umm/parse_dotnet46#^1.0.0",
     "@umm/scripts": "umm/scripts#^1.0.0"
   },
   "devDependencies": {}
